name:                tetris
version:             0.1.4.0
homepage:            https://github.com/samtay/tetris#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@pm.me
copyright:           2021 Sam Tay
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tetris
                     , UI.PickLevel
                     , UI.Game
  build-depends:       base == 4.14.1.0
                     , brick == 0.58.1
                     , containers == 0.6.2.1
                     , lens == 4.19.2
                     , linear == 1.21.5
                     , random == 1.1
                     , transformers == 0.5.6.2
                     , vty == 5.32
  default-language:    Haskell2010

executable tetris
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base == 4.14.1.0
                     , directory == 1.3.6.0
                     , filepath == 1.4.2.1
                     , optparse-applicative == 0.15.1.0
                     , tetris
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SamTay/tetris
